@@ -1,3 +1,7 @@
+2014-12-22 Ben Shi <powerstudio1st AT 163 DOT com>
+	* support/regression/tests/longlong.c:
+	  Modify test cases for large signed / unsigned long long.
+
 2014-12-21 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCmain.c,
